[tool.poetry]
name = "joe-lang"
version = "0.0.0"
description = ""
authors = ["Patrick Gingras <775.pg.12@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.0.242"
llvmlite = "0.41.0rc1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_expr = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_optional = true
implicit_reexport = false
strict = true
strict_concatenate = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"
